fix: css collapsed onto itself

--- a/src/layouts/green-page-style.css
+++ b/src/layouts/green-page-style.css
@@ -62,8 +62,7 @@ body {
       height: 15px;
       padding: 8px;
       font-size: 12px;
-      border: solid #424141;
-      border-radius: 15px;
+
     }
     .green-page .image {
       width: 30%;
