--- a/src/layouts/yellow-page-style.css
+++ b/src/layouts/yellow-page-style.css
@@ -170,8 +170,7 @@ body {
     height: 15px;
     padding: 8px;
     font-size: 12px;
-    border: solid #424141;
-    border-radius: 15px;
+
   }
   .green-page .image {
     height: 30px;
